--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,9 @@
 /********** Template CSS **********/
 :root {
-    --primary: #F3525A;
+    --primary: #65CCB8;
     --secondary: #F6F6F6;
     --light: #FFFFFF;
-    --dark: #152440;
+    --dark: #182628;
 }
 
 h1,
