--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 /********** Template CSS **********/
 :root {
-    --primary: #65CCB8;
+    --primary: #997C70;
     --secondary: #F6F6F6;
     --light: #FFFFFF;
     --dark: #182628;
