--- a/css/style.css
+++ b/css/style.css
@@ -117,6 +117,9 @@ h6,
     .navbar-light .navbar-nav .nav-link  {
         padding: 10px 0;
     }
+nav {
+    padding:2px 2px;
+}
 }
 
 .carousel-caption {
@@ -129,6 +132,9 @@ h6,
 }
 
 @media (max-width: 576px) {
+    .navbar-brand h1{
+        font-size:24px;
+    }
     .carousel-caption h5 {
         font-size: 14px;
         font-weight: 500 !important;
